--- a/options.html
+++ b/options.html
@@ -1,13 +1,210 @@
 <!DOCTYPE html>
-<html>
-<head><title>PR me!</title></head>
-<body>
-  <h1>Set your github organization</h1>
-  <input id="github" value="blake-education" />
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PR me!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <style type="text/css">
+      /*
+       * Globals
+       */
 
-  <div id="status"></div>
-  <button id="save">Save</button>
+      /* Links */
+      a,
+      a:focus,
+      a:hover {
+        color: #fff;
+      }
 
-  <script src="options.js"></script>
-</body>
+      /* Custom default button */
+      .btn-default,
+      .btn-default:hover,
+      .btn-default:focus {
+        color: #333;
+        text-shadow: none; /* Prevent inheritence from `body` */
+        background-color: #fff;
+        border: 1px solid #fff;
+      }
+
+
+      /*
+       * Base structure
+       */
+
+      html,
+      body {
+        height: 100%;
+        background-color: #2a6a85;
+      }
+      body {
+        color: #fff;
+        text-align: center;
+        text-shadow: 0 1px 3px rgba(0,0,0,.5);
+      }
+
+      /* Extra markup and styles for table-esque vertical and horizontal centering */
+      .site-wrapper {
+        display: table;
+        width: 100%;
+        height: 100%; /* For at least Firefox */
+        min-height: 100%;
+        -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+                box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+      }
+      .site-wrapper-inner {
+        display: table-cell;
+        vertical-align: top;
+      }
+      .cover-container {
+        margin-right: auto;
+        margin-left: auto;
+      }
+
+      /* Padding for spacing */
+      .inner {
+        padding: 30px;
+      }
+
+
+      /*
+       * Header
+       */
+      .masthead-brand {
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+
+      .masthead-nav > li {
+        display: inline-block;
+      }
+      .masthead-nav > li + li {
+        margin-left: 20px;
+      }
+      .masthead-nav > li > a {
+        padding-right: 0;
+        padding-left: 0;
+        font-size: 16px;
+        font-weight: bold;
+        color: #fff; /* IE8 proofing */
+        color: rgba(255,255,255,.75);
+        border-bottom: 2px solid transparent;
+      }
+      .masthead-nav > li > a:hover,
+      .masthead-nav > li > a:focus {
+        background-color: transparent;
+        border-bottom-color: #a9a9a9;
+        border-bottom-color: rgba(255,255,255,.25);
+      }
+      .masthead-nav > .active > a,
+      .masthead-nav > .active > a:hover,
+      .masthead-nav > .active > a:focus {
+        color: #fff;
+        border-bottom-color: #fff;
+      }
+
+      @media (min-width: 768px) {
+        .masthead-brand {
+          float: left;
+        }
+        .masthead-nav {
+          float: right;
+        }
+      }
+
+
+      /*
+       * Cover
+       */
+
+      .cover {
+        padding: 0 20px;
+      }
+      .cover .btn-lg {
+        padding: 10px 20px;
+        font-weight: bold;
+      }
+
+
+      /*
+       * Footer
+       */
+
+      .mastfoot {
+        color: #999; /* IE8 proofing */
+        color: rgba(255,255,255,.5);
+      }
+
+
+      /*
+       * Affix and center
+       */
+
+      @media (min-width: 768px) {
+        /* Pull out the header and footer */
+        .masthead {
+          position: fixed;
+          top: 0;
+        }
+        .mastfoot {
+          position: fixed;
+          bottom: 0;
+        }
+        /* Start the vertical centering */
+        .site-wrapper-inner {
+          vertical-align: middle;
+        }
+        /* Handle the widths */
+        .masthead,
+        .mastfoot,
+        .cover-container {
+          width: 100%; /* Must be percentage or pixels for horizontal alignment */
+        }
+      }
+
+      @media (min-width: 992px) {
+        .masthead,
+        .mastfoot,
+        .cover-container {
+          width: 700px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">PR me!</h3>
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1>Settings</h1>
+            <div id="status"></div>
+
+            <form>
+              <div class="form-group">
+                <h2> <label for="github">Set your github organization</label> </h2>
+                <input type="text" class="form-control" id="github" placeholder="blake-education">
+              </div>
+              <br/>
+              <div class="form-group">
+                <h2> <label for="comment">Customize the message!</label> </h2>
+                <p>* {{name}} will be replaced with the random users name.</p>
+                <input type="text" class="form-control" id="comment" placeholder=":eyes: please - {{name}}">
+              </div>
+            </form>
+            <button class="btn btn-default" id="save">Submit</button> <!-- outside so it doesn't submit form, hacky.. -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="options.js"></script>
+  </body>
 </html>
